--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="slick.css">
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   </head>
   <body>
@@ -74,56 +75,56 @@
           </article>
           <article>
             <div>
-              <img src="img/icona.svg" alt="">
+              <img src="img/os2.svg" alt="">
               <h3>OS Enterprise</h3>
             </div>
             <span>CRM Mobile per gestire la tua rete vendita</span>
           </article>
           <article>
             <div>
-              <img src="img/icona.svg" alt="">
+              <img src="img/os3.svg" alt="">
               <h3>OS Enterprise</h3>
             </div>
             <span>CRM Mobile per gestire la tua rete vendita</span>
           </article>
           <article>
             <div>
-              <img src="img/icona.svg" alt="">
+              <img src="img/os4.svg" alt="">
               <h3>OS Enterprise</h3>
             </div>
             <span>CRM Mobile per gestire la tua rete vendita</span>
           </article>
           <article>
             <div>
-              <img src="img/icona.svg" alt="">
+              <img src="img/os5.svg" alt="">
               <h3>OS Enterprise</h3>
             </div>
             <span>CRM Mobile per gestire la tua rete vendita</span>
           </article>
           <article>
             <div>
-              <img src="img/icona.svg" alt="">
+              <img src="img/os6.svg" alt="">
               <h3>OS Enterprise</h3>
             </div>
             <span>CRM Mobile per gestire la tua rete vendita</span>
           </article>
           <article>
             <div>
-              <img src="img/icona.svg" alt="">
+              <img src="img/os7.svg" alt="">
               <h3>OS Enterprise</h3>
             </div>
             <span>CRM Mobile per gestire la tua rete vendita</span>
           </article>
           <article>
             <div>
-              <img src="img/icona.svg" alt="">
+              <img src="img/os8.svg" alt="">
               <h3>OS Enterprise</h3>
             </div>
             <span>CRM Mobile per gestire la tua rete vendita</span>
           </article>
           <article>
             <div>
-              <img src="img/icona.svg" alt="">
+              <img src="img/os9.svg" alt="">
               <h3>OS Enterprise</h3>
             </div>
             <span>CRM Mobile per gestire la tua rete vendita</span>
@@ -134,34 +135,63 @@
           <h2>Le ultime novità</h2>
         </div>
       </div>
+
+      <!-- <img src="img/pory.gif" alt="" id="pory"> -->
+
+      <div class="blocco-voci">
+        <div class="slicker-voci multiple-items">
+          <div class="items">
+            <h3>tutti</h3>
+          </div>
+          <div class="items">
+            <h3>pim & impaginazione automatica</h3>
+          </div>
+          <div class="items">
+            <h3>marketing</h3>
+          </div>
+          <div class="items">
+            <h3>mobile app</h3>
+          </div>
+          <div class="items">
+            <h3>siti web</h3>
+          </div>
+          <div class="items">
+            <h3>ecommerce</h3>
+          </div>
+          <div class="items">
+            <h3>eventi</h3>
+          </div>
+        </div>
+      </div>
+
       <div class="bloccodopo">
         <div class="sliker">
 
         </div>
         <div class="blocchidopo">
           <article class="">
-            <img src="img/dopo.jpg" alt="">
+            <img src="img/dopo1.jpg" alt="">
+            <h4>mobile app</h4>
+            <h2>APP INTERVENTI TECNICI E INVIO RAPPORTINI</h2>
+            <span>Tech Away è un'App per l'assistenza tecnica e l'invio di rapportini in mobilità. Richiedici una DEMO gratuita!</span>
+          </article>
+          <article class="">
+            <img src="img/dopo2.jpg" alt="">
             <h4>ecommerce</h4>
             <h2>E-COMMERCE: BILANCIO 2020 E FUTURO</h2>
             <span>E-commerce: Bilancio 2020 e Futuro. Boom degli acquisti online! Cosa devono fare le aziende oggi? Impegnarsi verso la trasformazione digitale! Hai già un E-commerce? Il tuo negozio online non fattura? Contattaci!</span>
           </article>
           <article class="">
-            <img src="img/dopo.jpg" alt="">
-            <h4>ecommerce</h4>
-            <h2>E-COMMERCE: BILANCIO 2020 E FUTURO</h2>
-            <span>E-commerce: Bilancio 2020 e Futuro. Boom degli acquisti online! Cosa devono fare le aziende oggi? Impegnarsi verso la trasformazione digitale! Hai già un E-commerce? Il tuo negozio online non fattura? Contattaci!</span>
+            <img src="img/dopo3.jpg" alt="">
+            <h4>eventi</h4>
+            <h2>L'EUROPA PRONTA PER IL DIGITALE</h2>
+            <span>L'Europa detta le regole ai colossi del tech con il Digital Services Act (Dsa, Legge sui servizi digitali) e il Digital Markets Act (Dma, Legge sui mercati digitali) per una riforma dello spazio digitale.</span>
           </article>
           <article class="">
-            <img src="img/dopo.jpg" alt="">
-            <h4>ecommerce</h4>
-            <h2>E-COMMERCE: BILANCIO 2020 E FUTURO</h2>
-            <span>E-commerce: Bilancio 2020 e Futuro. Boom degli acquisti online! Cosa devono fare le aziende oggi? Impegnarsi verso la trasformazione digitale! Hai già un E-commerce? Il tuo negozio online non fattura? Contattaci!</span>
-          </article>
-          <article class="">
-            <img src="img/dopo.jpg" alt="">
-            <h4>ecommerce</h4>
-            <h2>E-COMMERCE: BILANCIO 2020 E FUTURO</h2>
-            <span>E-commerce: Bilancio 2020 e Futuro. Boom degli acquisti online! Cosa devono fare le aziende oggi? Impegnarsi verso la trasformazione digitale! Hai già un E-commerce? Il tuo negozio online non fattura? Contattaci!</span>
+            <img src="img/dopo4.jpg" alt="">
+            <h4>marketing</h4>
+            <h2>TREND DIGITAL MARKETING 2021: TRASFORMAZIONE DIGITALE OBBLIGATORIA</h2>
+            <span>Trend Digital Marketing 2021: trasformazione digitale. Dalla corsa agli Ecommerce allo Smart Working, dalla User Experience alla Realtà Aumentata, fino all'Intelligenza Artificiale e ai Contenuti interattivi.</span>
           </article>
         </div>
       </div>
@@ -171,6 +201,7 @@
       <div class="banner-green">
         <img src="img/tablet.png" alt="">
         <div class="green-right">
+          <img src="img/pory.gif" alt="" id="pory">
           <img src="img/os.svg" alt=""> <br><br>
           Oltre 50.000 ordini al mese con OS Enterprise, <br>
           la nostra piattaforma di Sales Force Automation <br><br>
@@ -180,8 +211,58 @@
       </div>
       <div class="banner-partners">
         <h3>ci hanno scelto</h3>
-        <div class="compagnie">
-
+        <div class="compagnie for_slick_slider autoplay">
+          <div class="items">
+            <img src="img/compagnie.png" alt="">
+          </div>
+          <div class="items">
+            <img src="img/compagnie1.png" alt="">
+          </div>
+          <div class="items">
+            <img src="img/compagnie2.png" alt="">
+          </div>
+          <div class="items">
+            <img src="img/compagnie3.png" alt="">
+          </div>
+          <div class="items">
+            <img src="img/compagnie4.png" alt="">
+          </div>
+          <div class="items">
+            <img src="img/compagnie5.png" alt="">
+          </div>
+          <div class="items">
+            <img src="img/compagnie6.png" alt="">
+          </div>
+          <div class="items">
+            <img src="img/compagnie7.png" alt="">
+          </div>
+          <div class="items">
+            <img src="img/compagnie8.png" alt="">
+          </div>
+          <div class="items">
+            <img src="img/compagnie9.png" alt="">
+          </div>
+          <div class="items">
+            <img src="img/compagnie10.png" alt="">
+          </div>
+          <div class="items">
+            <img src="img/compagnie11.png" alt="">
+          </div>
+          <div class="items">
+            <img src="img/compagnie12.png" alt="">
+          </div>
+          <div class="items">
+            <img src="img/compagnie13.png" alt="">
+          </div>
+          <div class="items">
+            <img src="img/compagnie14.png" alt="">
+          </div>
+          <div class="items">
+            <img src="img/compagnie15.png" alt="">
+          </div>
+          <div class="items">
+            <img src="img/compagnie16.png" alt="">
+          </div>
         </div>
         <a href="#" class="cosmobutton">scopri</a>
       </div>
@@ -277,6 +358,8 @@
 
       </div>
     </footer>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="slick.min.js" charset="utf-8"></script>
+    <script src="app.js" charset="utf-8"></script>
   </body>
 </html>
