--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <li>configuratori</li>
           <li>web & mobile</li>
           <li>pim & publishing</li>
-          <li><i class="fas fa-hamburger"></i></li>
+          <!-- <i class="fa fa-bars"></i> -->
         </ul>
       </div>
     </header>
