--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title></title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/slick.css">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   </head>
   <body>
@@ -32,7 +33,7 @@
           <li>configuratori</li>
           <li>web & mobile</li>
           <li>pim & publishing</li>
-          <!-- <i class="fa fa-bars"></i> -->
+          <i class="fa fa-bars"></i>
         </ul>
       </div>
     </header>
@@ -199,7 +200,7 @@
       <a href="#" class="cosmobutton" style="margin-bottom: 80px;">leggi tutto</a>
 
       <div class="banner-green">
-        <img src="img/tablet.png" alt="">
+        <img src="img/tablet.png" alt="" id="tablet">
         <div class="green-right">
           <img src="img/pory.gif" alt="" id="pory">
           <img src="img/os.svg" alt=""> <br><br>
