--- a/index.html
+++ b/index.html
@@ -77,58 +77,58 @@
           <article>
             <div>
               <img src="img/os2.svg" alt="">
-              <h3>OS Enterprise</h3>
+              <h3>Order Sender</h3>
             </div>
-            <span>CRM Mobile per gestire la tua rete vendita</span>
+            <span>Raccogli gli ordini da mobile</span>
           </article>
           <article>
             <div>
               <img src="img/os3.svg" alt="">
-              <h3>OS Enterprise</h3>
+              <h3>Order Factory</h3>
             </div>
-            <span>CRM Mobile per gestire la tua rete vendita</span>
+            <span>Acquisisci gli ordini dei tuoi clienti</span>
           </article>
           <article>
             <div>
               <img src="img/os4.svg" alt="">
-              <h3>OS Enterprise</h3>
+              <h3>Business Travel</h3>
             </div>
-            <span>CRM Mobile per gestire la tua rete vendita</span>
+            <span>Pianifica il tuo calendario appuntamenti</span>
           </article>
           <article>
             <div>
               <img src="img/os5.svg" alt="">
-              <h3>OS Enterprise</h3>
+              <h3>Categora</h3>
             </div>
-            <span>CRM Mobile per gestire la tua rete vendita</span>
+            <span>Tutti i dati in un unico punto</span>
           </article>
           <article>
             <div>
               <img src="img/os6.svg" alt="">
-              <h3>OS Enterprise</h3>
+              <h3>Tech Away</h3>
             </div>
-            <span>CRM Mobile per gestire la tua rete vendita</span>
+            <span>Svolgi interventi di assistenza tecnica e invia rapportini in mobilità</span>
           </article>
           <article>
             <div>
               <img src="img/os7.svg" alt="">
-              <h3>OS Enterprise</h3>
+              <h3>Paginae</h3>
             </div>
-            <span>CRM Mobile per gestire la tua rete vendita</span>
+            <span>Gestisci le tue pubblicazioni digitali</span>
           </article>
           <article>
             <div>
               <img src="img/os8.svg" alt="">
-              <h3>OS Enterprise</h3>
+              <h3>JetContacts</h3>
             </div>
-            <span>CRM Mobile per gestire la tua rete vendita</span>
+            <span>Conosci i tuoi utenti in pochi click</span>
           </article>
           <article>
             <div>
               <img src="img/os9.svg" alt="">
-              <h3>OS Enterprise</h3>
+              <h3>Aikuboard</h3>
             </div>
-            <span>CRM Mobile per gestire la tua rete vendita</span>
+            <span>Centralizza, automatizza, controlla l'evasione degli ordini</span>
           </article>
         </div>
         <div class="info-news">
